# sandboxer

./: .gitignore  404.html  Cargo.toml  InstanceList.luau  InstanceSandboxer.luau  Metatables.luau  README.md  Sandboxer.luau  Sandboxer.rbxm  index.html  lunr-index-1754155924901.json  lunr-index-1754156611378.json  lunr-index-1754156794087.json  lunr-index-1754157002065.json  lunr-index-1754159341168.json  lunr-index-1754164180676.json  lunr-index-1754164631831.json  lunr-index-1754165771414.json  lunr-index-1754179542655.json  lunr-index-1754179710221.json  lunr-index-1754179771939.json  lunr-index-1754263171168.json  lunr-index-1754311631897.json  lunr-index-1754312438877.json  lunr-index-1754352949462.json  lunr-index-1754415078095.json  lunr-index-1754417483865.json  lunr-index-1754845845616.json  lunr-index-1755392753399.json  lunr-index-1755395040074.json  lunr-index-1755545511055.json  lunr-index-1755546753464.json  lunr-index-1755963627997.json  lunr-index-1756238261237.json  lunr-index-1756239030667.json  lunr-index-1756302622249.json  lunr-index-1756302782304.json  lunr-index-1756314762910.json  lunr-index-1756595257536.json  lunr-index-1756595557629.json  (+102 more)
builder/: .gitignore  Cargo.toml
builder/src/: json.rs  main.rs
builder/src/luau/: init.luau
builder/src/luau/scripts/: InstanceSandboxer.test.luau  Sandboxer.test.luau
tests/: Cargo.toml  ExampleTestUsage.luau  InstanceList.test.luau  InstanceSandboxer.test.luau  Integration.test.luau  README.md  RunTests.luau  SUMMARY.md  Sandboxer.test.luau  TestFramework.luau
tests/src/: main.luau  main.rs
(+407 files in other folders)
