[package]
name = "sandboxer-rbxm-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
rbx_binary = "2.0.1"
rbx_dom_weak = "4.1.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", default-features = false, features = ["formatting"] }