[package]
name = "sandboxer-rblx-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
rbx_binary = "1.0.0"
rbx_dom_weak = "3.0.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", default-features = false, features = ["formatting"] }
